--- a/search/css/artist-profile.css
+++ b/search/css/artist-profile.css
@@ -1,7 +1,76 @@
 .contents {
     height: 612px;
+    width:100%;
+    /* background-image: url("./../img/home/ham.jpg"); 
+    background-size:cover; 
+    background-position-x: center; */
 }
 
 .pro-area {
     color: white;
 }
+
+/* .gradient-box {
+    position: absolute;
+    background: radial-gradient(90.22% 90.22% at 100% 0%, rgba(29, 29, 29, 0.0001) 0%, #1D1D1D 100%);    
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+} */
+
+.pro-title {
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: -0.3px;
+    color: white;
+    opacity: 40%;
+    margin-bottom: 12px;
+}
+
+.pro-area h1 {
+    font-size: 56px;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    color: white;
+    width: 1000px;
+    height: 78px;
+    margin-bottom: 8px;
+}
+
+.pro-area h2 {
+    font-size: 34px;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    color: white;
+    margin-bottom: 8px;
+}
+
+.pro-tag {
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: -0.3px;
+    color: white;
+    opacity: 65%;
+    margin-bottom: 20px;
+}
+
+.pro-info {
+    width: 640px;
+    height: 136px;
+}
+
+.pro-info p {
+    font-size: 22px;
+    font-weight: 400;
+    letter-spacing: -0.3px;
+    color: white;
+    opacity: 65%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    line-height: 34px;
+}
+
