--- a/search/css/search.css
+++ b/search/css/search.css
@@ -105,6 +105,7 @@
     height: 255px;
     border-radius: 6px;
     overflow: hidden;
+    /* box-sizing: border-box; */
 }
 
 .item-box li:not(:last-child) {
@@ -120,8 +121,9 @@
 
 .item.active {
     border: 4px solid white;
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
+
 
 /*.item a.on{*/
 /*    border:5px solid red;*/
@@ -146,6 +148,8 @@
     width: 1000px;
     height: 78px;
     margin-bottom: 68px;
+    position:sticky;
+    top: 88px;
 }
 
 .result-area p{
@@ -158,6 +162,7 @@
 .artist-container {
     width: 812px;
     height: 300px;
+    margin-bottom: 108px;
 }
 
 .artist-img {
@@ -190,7 +195,7 @@
     -webkit-box-orient: vertical;
 }
 
-.artist-btn {
+.btn-artist {
     font-size: 24px;
     font-weight: 700;
     color: white;
@@ -201,7 +206,7 @@
     padding: 22px 33px;
 }
 
-.artist-btn:hover {
+.btn-artist.on {
     font-size: 24px;
     font-weight: 700;
     color: white;
@@ -213,15 +218,33 @@
     padding: 22px 33px;
 }
 
-.art-slides {
-    position: relative;
+/* .art-contents {
     width: 1680px;
-    margin-top: 108px;
+    height: 234px;
+    position: sticky;
+    top: 0;
+    background-color: coral;
     overflow: hidden;
+    
+} */
+
+.art-slides {
+    width: 1680px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    position: sticky;
+    top: 234px;
+    background-color: #2841FA;
+}
+
+.test {
+    
 }
 
 .slide {
     position: relative;
+    overflow: hidden;
 }
 
 .slide .art-item {
