--- a/search/css/artist-profile.css
+++ b/search/css/artist-profile.css
@@ -6,8 +6,191 @@
     background-position-x: center; */
 }
 
+.explanation.active {
+    left: 256px;
+}
+
+.explanation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 947px;
+    background-image: url("./../img/home/ham.jpg");
+    background-size: cover;
+    background-position-x: center;
+}
+
+.main-exhibition {
+    position: absolute;
+    left: 160px;
+    top: 280px;
+    z-index: 1;
+    color: white;
+}
+
+.title1 {
+    font-size: 28px;
+    font-weight: 700;
+    opacity: 0.4;
+    margin-bottom: 12px;
+}
+
+.title2 {
+    font-size: 56px;
+    font-weight: bold;
+    color: #fff;
+    margin-bottom: 8px;
+}
+
+.title3 {
+    font-size: 34px;
+    font-weight: bold;
+    color: #fff;
+    margin-bottom: 8px;
+}
+
+.tags {
+    width: auto;
+    height: 30px;
+    float: left;
+    margin-bottom: 20px;
+}
+
+.tags li {
+    float: left;
+}
+
+.tags a {
+    color: #fff;
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.bar {
+    display: inline-block;
+    width: 1px;
+    height: 16px;
+    background-color: #fff;
+    opacity: 0.4;
+    margin: 0 7px;
+}
+
+.tags li:last-of-type .bar {
+    display: none;
+}
+
+li:focus {
+    outline: none;
+}
+
+li a:focus {
+    outline: none;
+}
+
+a:focus {
+    outline: none;
+}
+
+
+
+.icon-frame {
+    background-image: url("img/home/icon_play_count.png");
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-size: cover;
+    margin-left: 10px;
+    vertical-align: text-bottom;
+}
+
+.exhibition-detail {
+    margin-top: 20px;
+    margin-bottom: 60px;
+    max-height: 136px;
+    font-size: 22px;
+    font-weight: 400;
+    opacity: 0.65;
+    width: 640px;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: box;
+    vertical-align: top;
+    text-overflow: ellipsis;
+    word-break: break-all;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3
+}
+
+.icon-play-active {
+    background-image: url(img/home/Triangle.png);
+    width: 20px;
+    height: 16px;
+    display: inline-block;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.icon-info {
+    background-image: url(img/home/icon_info_inactive.png);
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.buttons li {
+    float: left;
+    box-sizing: border-box;
+}
+
+.buttons a {
+    display: inline-block;
+    width: 232px;
+    height: 66px;
+    box-sizing: border-box;
+    border: 1px solid #fff;
+    opacity: 0.4;
+    border-radius: 6px;
+    margin-right: 20px;
+    font-size: 24px;
+    font-weight: 400;
+    color: #fff;
+    line-height: 64px;
+    text-align: center;
+}
+
+.gradient-box {
+    background: radial-gradient(90.22% 90.22% at 100% 0%, rgba(29, 29, 29, 0.0001) 0%, #1D1D1D 100%);
+    width: 100%;
+    height: 1080px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.btn-play a.active,
+.btn-info a.active {
+    background-color: #2841fa;
+    border: none;
+    opacity: 1;
+}
+
+.carousel {
+    position: fixed;
+    left: 160px;
+    top: 500px;
+    height: 184px;
+    width: 1920px;
+    overflow: hidden;
+    transition-duration: 1s;
+}
+
 .pro-area {
     color: white;
+    opacity: 0;
 }
 
 /* .gradient-box {
@@ -26,6 +209,8 @@
     color: white;
     opacity: 40%;
     margin-bottom: 12px;
+    position: fixed;
+    top: 88px;
 }
 
 .pro-area h1 {
@@ -74,3 +259,119 @@
     line-height: 34px;
 }
 
+.title-area {
+    opacity: 0;
+}
+
+/**/
+.carousel.active {
+    left: 416px;
+}
+
+.carousel {
+    position: fixed;
+    left: 160px;
+    top: 882px;
+    height: 184px;
+    width: 1920px;
+    overflow: hidden;
+    transition-duration: 1s;
+}
+
+.carousel-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition-duration: 1s;
+/*            clear:both;*/
+
+}
+
+.must-exhibition {
+    position: relative;
+    margin-top: 40px;
+}
+
+.title4 {
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+    margin-bottom: 20px;
+    position: relative;
+    display: block;
+}
+
+.carousel p {
+    height: 45px;
+}
+
+.item-container {
+    position: relative;
+    left: 0;
+    margin-top: 20px;
+    transition-duration: 1s;
+}
+
+.item-box {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.item a {
+    display: inline-block;
+    width: 400px;
+    width: 400px;
+    height: 255px;
+    border-radius: 6px;
+}
+
+.item a.active {
+    border: 4px solid #fff;
+    box-sizing: border-box
+}
+
+.must-exhibition .item {
+    height: 720px;
+}
+
+.must-exhibition .item a {
+    height: 720px;
+}
+
+.must-exhibition .item a.on {
+    height: 1080px;
+    transition: ease-out 0.5s 2s;
+}
+
+.must-exhibition .item a.active {
+    height: 720px;
+    border: 4px solid #fff;
+    box-sizing: border-box
+}
+
+.artist-list .item a.active {
+    width: 216px;
+    height: 300px;
+    border: 4px solid #fff;
+    box-sizing: border-box
+}
+.artist-list a{
+    width:216px; 
+    height:300px;
+}
+
+.item {
+    float: left;
+    margin-right: 20px;
+    background-size: cover;
+}
+
+.item {
+    width: 400px;
+    height: 255px;
+    display: block;
+    border-radius: 6px;
+    background-position-x: center;
+}
